Actualizada libreria jquery 	modificamos: 		 carpeta js 		header.html Consultas con JQuery en fichero registrar.php  7/02/13

--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
                                                              folla de estilo que 
                                                              aparecia en contactar.html-->
 
-	  <script src="js/jquery190min.js" type="text/javascript"></script>
+	  <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
 	  <script src="js/respond-min.js" type="text/javascript"></script>
 	  <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
           <script src="js/jquery.formalize.min.js" type="text/javascript"></script><!-- engadimos a 
